Moved jump anchor inside container, corrected and implemented focus styles

--- a/css/main.css
+++ b/css/main.css
@@ -6,20 +6,24 @@
 @media screen {
 
     /* General */
+    .container {position: relative;}
     .image {background-position: top center; background-repeat: no-repeat; background-size: cover;}
     a {text-decoration: none;}
     a:focus {outline: 2px dotted #000; outline-offset: 5px;}
-    
+    input:focus {outline: 2px solid #000;}
+    #jump {position: absolute; top: 10px; left: 85px; font-size: 0; color: white; text-decoration: underline;}
+    #jump:focus {font-size: inherit; outline-color: #fff;}
+
     /* Masthead */ 
-    header {background-image: url(../layout2-assets/hero-image-greece.webp); min-height: 527px; position: relative; left: 0}
+    header {background-image: url(../layout2-assets/hero-image-greece.webp); min-height: 527px;}
     #logo {background-image: url(../layout2-assets/go-greek-tours.png); min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
-    #logo:focus {border-color: #fff;}
+    #logo:focus {outline-color: #fff;}
     header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
     header form {position: relative; top: 330px; width: 100%; display: flex; justify-content: center;}
     #searchField, #searchButton {font: 16px/1.3 'Roboto Slab', serif; border-radius: 0; border: 0; height: 40px;}
     #searchField {top: 10px; width: 36%; padding: 0 10px; box-sizing: border-box;}
     #searchButton {padding: 0 30px; background-color: #00214F; color: #fff;}
-    #searchField:focus, #searchButton:focus {border: 2px solid #fff;}
+    #searchButton:focus {outline-color: #fff;}
 
     /* Greek History */
     .tours {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
@@ -55,9 +59,7 @@
     footer ul a {color: #666;}
     footer ul a:hover, footer ul a:focus {color: #000;}
     footer input[type*="email"] {border: 1px solid #000; padding: 5px; width: 96.5%;}
-    footer input[type*="email"]:focus {border: 2px solid #000;}
     footer input[type*="submit"] {color: #fff; background-color: #448CCB; padding: 5px 15px; cursor: pointer; margin-top: 13px; border: 1px solid black;}
-    footer input[type*="submit"]:hover, footer input[type*="submit"]:focus {background-color: #000;}
     footer aside {text-align: right; display: grid; justify-content: right; grid-template-rows: repeat(2, 1fr); gap: 20px 0;}
     footer aside a {background-image: url(../layout2-assets/twitter-logo.png); max-height: 50px; display: block; width: 60px; justify-self: end; margin: 0;} 
     footer aside p {margin: 0;}
